# fpga-filter-software

./: .gitignore  CMakeLists.txt  README.md
include/filter_core/: camera.h  fpga_communicator.h  framerate_checker.h  program_options.h
src/: core.cc
src/filter_core/: camera.cc  fpga_communicator.cc  program_options.cc  test.cc
